feat: declarative xml menus, MenuBuilder, JDK 25, Central Portal publishing and dependency cleanup
- new xml menu format (menubar, menu, item, checkbox, radio, separator, popup, toolbar) with MenuXmlReader, MenuXmlWriter and the schema menu.xsd
- new MenuBuilder with ActionRegistry, MissingActionPolicy, resource bundle texts, icon resolution, button groups and anchor placement; new MenuInfoExtensions with find, flatten, orderByAnchor and merge for plugin contributions
- removed the xstream based TreeIdNode serialization, MenuVisitorExtensions and the fields ordinal and actionClass
- fixed LookAndFeels.OCEAN (ClassCastException), LookAndFeelMetalAction, the accelerator lookup via the private client property _WhenInFocusedWindow, the hardcoded NoAction class from the test dependency, the NPE in ParentMenuResolver, the debug output in PopupListener, the duplicate key in BaseMenuId and the empty javadoc jar
- BrowserControlExtensions uses java.awt.Desktop with xdg-open, open and rundll32 fallback; removed the Browsers enum
- ParentMenuResolver consolidated to a single ancestor walk
- raised the java version to 25 and reduced the core dependencies to model-data, removed unused test dependencies
- renamed the interactive demo classes from *Test to *Demo, new unit tests for the xml, build, converter and look and feel classes
- build: gradle 9.7.0, foojay toolchain resolver, publishing to the Central Portal with in-memory GPG signing, publish.yml workflow, Makefile, spotless license header step instead of the license plugin, plain git tagRelease task instead of grgit, configuration cache, updated plugins and dependencies
- removed the /gradle rule from .gitignore that hid the gradle build script files
- README and CHANGELOG updated, version 5.0-SNAPSHOT

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>