@@ -1,7 +1,7 @@
 /**
  * The MIT License
  *
- * Copyright (C) 2021 Asterios Raptis
+ * Copyright (C) 2026 Asterios Raptis
  *
  * Permission is hereby granted, free of charge, to any person obtaining
  * a copy of this software and associated documentation files (the
@@ -25,165 +25,116 @@
 package io.github.astrapi69.browser;
 
 import java.awt.Component;
+import java.awt.Desktop;
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.util.Arrays;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.logging.Level;
 
 import javax.swing.JOptionPane;
 
-import io.github.astrapi69.throwable.RuntimeExceptionDecorator;
+import lombok.NonNull;
+import lombok.extern.java.Log;
 
 /**
- * The class {@link BrowserControlExtensions} helps you to open an url in the standard web-browser.
+ * The class {@link BrowserControlExtensions} opens urls in the default browser of the operating
+ * system. The {@link Desktop} api is used if supported, otherwise the platform command
+ * {@code xdg-open}, {@code open} or {@code rundll32} is executed as fallback
  */
-public class BrowserControlExtensions
+@Log
+public final class BrowserControlExtensions
 {
 
-	/** Constant for the name from the mac file manager. */
-	private static final String MAC_FILE_MANAGER = "com.apple.eio.FileManager";
-
-	/** Constant for the unix command 'which'. */
-	private static final String UNIX_COMMAND_WHICH = "which";
-
-	/** The flag to display a url. */
-	private static final String WINDOWS_FLAG = "url.dll,FileProtocolHandler";
-
-	/** The default system browser under windows. */
-	private static final String WINDOWS_PATH = "rundll32";
-
-	/**
-	 * This method opens the specified url in the standard web-browser.
-	 *
-	 * @param url
-	 *            An url like "http://www.yahoo.com/"
-	 * @return the object
-	 */
-	public static Object displayURLonStandardBrowser(final String url)
+	private BrowserControlExtensions()
 	{
-		Object obj;
-
-		if (OS.isMac())
-		{
-			obj = RuntimeExceptionDecorator.decorate(() -> openURLinMacOS(url));
-		}
-		else if (OS.isWindows())
-		{
-			obj = RuntimeExceptionDecorator.decorate(() -> openURLinWindowsOS(url));
-		}
-		else
-		{ // if operate syste is Unix or Linux
-			obj = RuntimeExceptionDecorator.decorate(() -> openURLinUnixOS(url));
-		}
-		return obj;
 	}
 
 	/**
-	 * This method opens the specified url in the standard web-browser.
+	 * Opens the given url in the default browser of the operating system
 	 *
-	 * @param parentComponent
-	 *            The parent component. Can be null.
 	 * @param url
-	 *            An url like "http://www.yahoo.com/"
-	 * @return the object
+	 *            the url to open
+	 * @return true if the browser could be started otherwise false
 	 */
-	public static Object displayURLonStandardBrowser(final Component parentComponent,
-		final String url)
+	public static boolean displayURLonStandardBrowser(final @NonNull String url)
 	{
-		Object obj = null;
+		URI uri;
 		try
 		{
-			obj = displayURLonStandardBrowser(url);
+			uri = new URI(url);
 		}
-		catch (final Exception e)
+		catch (URISyntaxException e)
+		{
+			log.log(Level.WARNING, "Invalid url: " + url, e);
+			return false;
+		}
+		return browse(uri);
+	}
+
+	/**
+	 * Opens the given url in the default browser of the operating system and shows a message dialog
+	 * on the given parent component if the browser could not be started
+	 *
+	 * @param parentComponent
+	 *            the parent component for the message dialog, can be null
+	 * @param url
+	 *            the url to open
+	 * @return true if the browser could be started otherwise false
+	 */
+	public static boolean displayURLonStandardBrowser(final Component parentComponent,
+		final @NonNull String url)
+	{
+		boolean opened = displayURLonStandardBrowser(url);
+		if (!opened)
 		{
 			JOptionPane.showMessageDialog(parentComponent,
-				"An exception occured attempting to run the default web browser\n" + e);
+				"Could not open the default web browser for the url\n" + url);
 		}
-		return obj;
+		return opened;
 	}
 
 	/**
-	 * Opens the given URL in mac os.
-	 * 
-	 * @param url
-	 *            the url
-	 * 
-	 * @return the object
-	 * 
-	 * @throws ClassNotFoundException
-	 *             occurs if a given class cannot be located by the specified class loader
-	 * @throws NoSuchMethodException
-	 *             is thrown if a matching method is not found
-	 * @throws IllegalAccessException
-	 *             is thrown if this {@code Method} object is enforcing Java language access control
-	 *             and the underlying method is inaccessible
-	 * @throws InvocationTargetException
-	 *             is thrown if the underlying method throws an exception.
+	 * Opens the given {@link URI} in the default browser of the operating system
+	 *
+	 * @param uri
+	 *            the {@link URI} to open
+	 * @return true if the browser could be started otherwise false
 	 */
-	private static Object openURLinMacOS(final String url) throws ClassNotFoundException,
-		NoSuchMethodException, IllegalAccessException, InvocationTargetException
+	public static boolean browse(final @NonNull URI uri)
 	{
-		final Class<?> fileManagerClass = Class.forName(MAC_FILE_MANAGER);
-		final Method openURL = fileManagerClass.getDeclaredMethod("openURL", String.class);
-		return openURL.invoke(null, url);
-	}
-
-	/**
-	 * Opens the given URL in unix os.
-	 * 
-	 * @param url
-	 *            the url
-	 * 
-	 * @return the boolean
-	 * 
-	 * @throws InterruptedException
-	 *             the interrupted exception
-	 * @throws IOException
-	 *             Signals that an I/O exception has occurred.
-	 * @throws Exception
-	 *             the exception
-	 */
-	private static Boolean openURLinUnixOS(final String url)
-		throws InterruptedException, IOException, Exception
-	{
-		boolean executed = false;
-		for (final Browsers browser : Browsers.values())
+		if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE))
 		{
-			if (!executed)
+			try
 			{
-				executed = Runtime.getRuntime()
-					.exec(new String[] { UNIX_COMMAND_WHICH, browser.getBrowserName() })
-					.waitFor() == 0;
-				if (executed)
-				{
-					Runtime.getRuntime().exec(new String[] { browser.getBrowserName(), url });
-				}
+				Desktop.getDesktop().browse(uri);
+				return true;
+			}
+			catch (IOException | RuntimeException e)
+			{
+				log.log(Level.FINE, "Desktop.browse failed for " + uri + ", trying fallback", e);
 			}
 		}
-		if (!executed)
-		{
-			throw new Exception(Arrays.toString(Browsers.values()));
-		}
-		return executed;
+		return browseWithPlatformCommand(uri);
 	}
 
-	/**
-	 * Opens the given URL in windows os.
-	 * 
-	 * @param url
-	 *            the url
-	 * 
-	 * @return the process
-	 * 
-	 * @throws IOException
-	 *             Signals that an I/O exception has occurred.
-	 */
-	private static Process openURLinWindowsOS(final String url) throws IOException
+	private static boolean browseWithPlatformCommand(final URI uri)
 	{
-		String cmd;
-		cmd = WINDOWS_PATH + " " + WINDOWS_FLAG + " ";
-		return Runtime.getRuntime().exec(cmd + url);
+		String[] command = switch (OS.get())
+		{
+			case WINDOWS -> new String[] { "rundll32", "url.dll,FileProtocolHandler",
+					uri.toString() };
+			case MAC -> new String[] { "open", uri.toString() };
+			default -> new String[] { "xdg-open", uri.toString() };
+		};
+		try
+		{
+			new ProcessBuilder(command).start();
+			return true;
+		}
+		catch (IOException e)
+		{
+			log.log(Level.WARNING, "Could not open the browser with " + command[0], e);
+			return false;
+		}
 	}
-
 }
